PC-1276 Corrected alignment for bound-with holdings
Boundwith holdings are multilined. To accomodate that
this now takes the inner span an mimics the GetThis
button margin/padding to ensure the call number
aligns.

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -887,8 +887,9 @@ form.searchForm, .record-tabs, .navbar-form {
         border-top:1px solid @medgray;
         padding-top:1rem;
       }
-      .copy-number {
-        vertical-align: middle;
+      .copy-number > span {
+        display: inline-block;
+        margin-top: calc(0.3rem + 1px);
       }
     }
   }
